<resources>
    <string name="app_name">Jonopod</string>
    <string name="title_home">Home</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_profile">Profile</string>
    <string name="title_report">Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_police">Police</string>
    <string name="title_local_gov">Local Government</string>
    <string name="title_health_service">Health Service</string>


    <string name="title_activity_maps">MapsActivity</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="preference_file_key">com.olympiandroids.jonopod</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nunc ac facilisis ante. Ut feugiat ornare pretium. Fusce ac aliquam metus.
        Sed tincidunt facilisis tincidunt. Vestibulum pulvinar ultrices tempus.
        Ut posuere vehicula lorem, volutpat dapibus leo egestas sit amet.
        Nunc congue vehicula turpis eu auctor. Aenean eget vulputate justo.
        Donec enim sem, tempor et sem sed, placerat interdum eros.
        Praesent consequat dignissim tellus eget congue.
        Donec pretium sollicitudin nunc eu suscipit.
        Phasellus egestas dui in mi interdum, eu accumsan turpis congue.</string>


</resources>